Ingreso de punto 3 y 4
Se cargan los puntos 3 y 4 del taller #2

--- a/exploracion_airbnb.ipynb
+++ b/exploracion_airbnb.ipynb
@@ -19,6 +19,7 @@
     "from extraccion import Extraccion\n",
     "from bson.decimal128 import Decimal128\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "\n",
     "URL = \"mongodb://localhost:27017/\"\n",
     "DATABASE_NAME = \"AirBnbDB\""
